<resources>
    <string name="app_name">Leadfrog</string>

    <string name="all_hint_image">image</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ivanov Ivan Petrovich</string>
    <string name="nav_header_subtitle">Test Company</string>
    <string name="nav_header_position">QA</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="drawer_nav_home">Home</string>
    <string name="drawer_nav_gallery">Gallery</string>
    <string name="drawer_nav_settings">Settings</string>
    <string name="drawer_nav_help">Help</string>
    <string name="drawer_nav_logout">Logout</string>
    <string name="bottom_nav_leads">Leads</string>
    <string name="bottom_nav_contacts">Contacts</string>
    <string name="bottom_nav_statistics">Statistics</string>
    <string name="toolbar_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="it_s_home">It\'s home</string>
    <string name="it_s_settings">It\'s settings</string>
    <string name="it_s_help">It\'s help</string>
    <string name="it_s_logout">It\'s logout</string>
    <string name="it_s_dashboard">It\'s dashboard</string>
    <string name="it_s_notifications">It\'s notifications</string>
    <string name="name_title">Name:</string>
    <string name="company_title">Company:</string>
    <string name="position_title">Position:</string>
    <string name="phone_title">Phone:</string>
    <string name="email_title">Email:</string>
    <string name="see_details"><u>See details...</u></string>
</resources>
